--- a/styles/global.css
+++ b/styles/global.css
@@ -2,9 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
   body {
     font-family: "Lexend ExaVariable";
   } 
 
+	.link-underline {
+		text-decoration: none;
+		padding-bottom: 3px;
+		background-image: linear-gradient(transparent, transparent), linear-gradient(#fff, #fff);
+		background-size: 0 1px;
+		background-position: 0 100%;
+		background-repeat: no-repeat;
+		transition: background-size .2s ease-in-out;
+	}
+
+	.link-underline-black {
+		background-image: linear-gradient(transparent, transparent), linear-gradient(#000, #000)
+	}
+
+	.link-underline:hover {
+		background-size: 100% 3px;
+		background-position: 0 100%
+	}
