--- a/styles/global.css
+++ b/styles/global.css
@@ -10,27 +10,25 @@ root, html, body {
   -webkit-font-smoothing: antialiased;
 }
 
-.link-underline {
-  text-decoration: none;
-  padding-bottom: 3px;
-  background-image: linear-gradient(transparent, transparent),
-    linear-gradient(#fff, #fff);
-  background-size: 0 1px;
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 0.2s ease-in-out;
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 9999px;
+  overflow: hidden;
 }
 
-.link-underline-black {
-  background-image: linear-gradient(transparent, transparent),
-    linear-gradient(#022b3a, #022b3a);
+::-webkit-scrollbar-track {
+  background: rgba( 255, 255, 255, 0.15 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 2.5px );
+  -webkit-backdrop-filter: blur( 2.5px );
+  border-radius: 10px;
 }
 
-.link-underline:hover {
-  background-size: 100% 3px;
-  background-position: 0 100%;
+::-webkit-scrollbar-thumb {
+  border-radius: 9999px;
+  background-color: #022b3a;
 }
-
-.shapes1 {
-  z-index: -500;
+::-webkit-scrollbar-thumb:hover {
+  border-radius: 9999px;
+  background-color: #022b3ab7;
 }
