Landing page rewrite 3.0

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
-root, html, body {
+root,
+html,
+body {
   text-rendering: optimizeLegibility;
   font-smooth: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,10 +18,10 @@ root, html, body {
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba( 255, 255, 255, 0.15 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 2.5px );
-  -webkit-backdrop-filter: blur( 2.5px );
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
   border-radius: 10px;
 }
 
@@ -32,3 +33,4 @@ root, html, body {
   border-radius: 9999px;
   background-color: #022b3ab7;
 }
+
