--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+h1 {
+  @apply text-xl;
+};
+h2 {
+  @apply text-2xl;
+};
+h3 {
+  @apply text-4xl;
+};
+h4 {
+  @apply text-5xl;
+};
+h5 {
+  @apply text-7xl;
+};
+p {
+  @apply text-xs md:text-sm lg:text-base;
+};
+};
+
+
 root,
 html,
 body {
